# rlpbwt

./: .gitignore  CMakeLists.txt  README.md  build_rlpbwt_thr.cpp  doxyfile  fm_index-file.sdsl  fm_index-file.sdsl.html  main.cpp  program  rlpbwt_main.cpp
html/: annotated.html  class_file_not_found_exception-members.html  class_file_not_found_exception.html  classes.html  classpbwt__column-members.html  classpbwt__column.html  classpbwt__rlrow-members.html  classpbwt__rlrow.html  classrlpbwt-members.html  classrlpbwt.html  dir_2254ed4c86842eb07fcb8e0eac2ef2c8.html  dir_3c9f3ed66bc349525b536302ffbe5a4f.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_cb8aebdcbcd7898634ff25bad2892a2f.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f89abcb304c928c7d889aa5625570de5.html  exceptions_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  pbwt__column_8h_source.html  pbwt__rlrow_8h_source.html  rlpbwt_8h_source.html  utils_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
include/: birlpbwt.h  col.h  column.h  column_bv.h  column_ms.h  column_naive.h  column_naive_ms.h  column_thr.h  columnbv.h  exceptions.h  match.h  match_end.h  matches_naive.h  ms.h  ms_matches.h  panel_ra.h  pbwt_column.h  pbwt_rlrow.h  phi_struct.h  phi_support.h  rlpbwt.h  rlpbwt_bv.h  rlpbwt_column.h  rlpbwt_match.h  rlpbwt_ms.h  rlpbwt_naive.h  rlpbwt_naive_ms.h  rlpbwt_ra.h  rlpbwt_rlrow.h  rlpbwt_thr.h  rlpbwtbv.h  rlpbwtc.h  rlpbwtm.h  rlrow.h  slp_panel_ra.h  utils.h
input/: cut.txt  cutc.txt  double.txt  ext.sh  input.txt  matrix1.txt  matrix2.txt  matrix3.txt  matrix_simple.txt  out.txt  out2.txt  query.txt  query_tr.txt  revert.py  sample.slp  sample.txt  sample2.slp  sample2.txt  sample_new.txt  sample_new2.txt  script.txt  single.txt  singlerev.txt
latex/: annotated.tex  class_file_not_found_exception.eps  class_file_not_found_exception.tex  classpbwt__column.tex  classpbwt__rlrow.tex  classrlpbwt.tex  hierarchy.tex  refman.tex
lib/: birlpbwt.cpp  col.cpp  column.cpp  column_bv.cpp  column_ms.cpp  column_naive.cpp  column_naive_ms.cpp  column_thr.cpp  columnbv.cpp  match.cpp  match_end.cpp  ms.cpp  ms_matches.cpp  panel_ra.cpp  pbwt_column.cpp  pbwt_rlrow.cpp  rlpbwt.cpp  rlpbwt_bv.cpp  rlpbwt_column.cpp  rlpbwt_match.cpp  rlpbwt_naive.cpp  rlpbwt_rlrow.cpp  rlpbwt_thr.cpp  rlpbwtbv.cpp  rlpbwtc.cpp  rlpbwtm.cpp  rlrow.cpp  slp_panel_ra.cpp  utils.cpp
output/: pbwt.ser  sample2_col.ser  sample2_panel.ser  sample2_pbwt.ser  sample2bv_panel.ser  sample2bv_pbwt.ser  sample2orig_panel.ser  sample2orig_pbwt.ser
script/: build_slp.py  extract_query.py  matrix_to_fasta.py  matrix_to_slp.py  panel.txt  query.txt  time_verbose_extractor.py  tsv_pandas.py  tsv_to_single_row.py
slides/:  *Minibuf-1*  slides.aux  slides.nav  slides.snm  slides.tex  slides.toc
slides/graph/: backtravis.drawio  bibacktravis.drawio  bifronttravis.drawio  bitravis.drawio  bitravismatch.drawio  divtravis.drawio  fgtravis.drawio  fgtravis2.drawio  lce2.drawio  lce_panel.drawio  phi.drawio  preftravis.drawio  thr_panel.drawio  ~$lce_panel.drawio.dtmp  ~$thr_panel.drawio.dtmp
slides/pseudo/: psuedo.aux  psuedo.bcf  psuedo.run.xml  psuedo.tex
snakemake/script/: analyze_time_verbose.py
test/: benchmark_test.h  test.cpp
